cmake_minimum_required(VERSION 3.21)
project(CSP)

set(CMAKE_CXX_STANDARD 14)

add_executable(202109-1 202109-1.cpp)
add_executable(202112-1 202112-1.cpp)
add_executable(202112-2 202112-2.cpp)
add_executable(202104-1 202104-1.cpp)
add_executable(202012-1 202012-1.cpp)
add_executable(202009-1 202009-1.cpp)
add_executable(202006-1 202006-1.cpp)
add_executable(201912-1 201912-1.cpp)
add_executable(201909-1 201909-1.cpp)
add_executable(201903-1 201903-1.cpp)
add_executable(202203-1 202203-1.cpp)
add_executable(201812-1 201812-1.cpp)
add_executable(201803-1 201803-1.cpp)
add_executable(201712-1 201712-1.cpp)
add_executable(201709-1 201709-1.cpp)
add_executable(201703-1 201703-1.cpp)
add_executable(201612-1 201612-1.cpp)
add_executable(201609-1 201609-1.cpp)
add_executable(201604-1 201604-1.cpp)
add_executable(201512-1 201512-1.cpp)
add_executable(201509-1 201509-1.cpp)
add_executable(201503-1 201503-1.cpp)
add_executable(201412-1 201412-1.cpp)
add_executable(201409-1 201409-1.cpp)
add_executable(201403-1 201403-1.cpp)
add_executable(201312-1 201312-1.cpp)
add_executable(201312-2 201312-2.cpp)
add_executable(201403-2 201403-2.cpp)
add_executable(201409-2 201409-2.cpp)
add_executable(201412-2 201412-2.cpp)
add_executable(201503-2 201503-2.cpp)
add_executable(201509-2 201509-2.cpp)
add_executable(201512-2 201512-2.cpp)
add_executable(201604-2 201604-2.cpp)
add_executable(201609-2 201609-2.cpp)
add_executable(201612-2 201612-2.cpp)
add_executable(201703-2 201703-2.cpp)
add_executable(201709-2 201709-2.cpp)
add_executable(201712-2 201712-2.cpp)
add_executable(201803-2 201803-2.cpp)
add_executable(201809-1 201809-1.cpp)
add_executable(201809-2 201809-2.cpp)
add_executable(201812-2 201812-2.cpp)
add_executable(201903-2 201903-2.cpp)
add_executable(201903-2_1 201903-2_1.cpp)